# r15

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: analysis.py  health.py  progress.py
app/models/: requests.py  responses.py
app/services/: analysis_pipeline.py  document_normalizer.py  image_fetcher.py  ocr_service.py  ollama_service.py  parser_service.py  performance_settings.py  progress_store.py  report_builder.py  rules_engine.py  vision_parser.py
cliente_web/: index.html  package-lock.json  package.json
cliente_web/src/: App.jsx  styles.css
document_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
documentos/: arquitectura-proyecto.md  decisiones-tecnicas.md  errores-y-soluciones.md  plan-implementacion.md  roadmap-mvp.md
tests/: test_ollama_only_pipeline.py  test_performance_optimizations.py  test_progress_store.py
